<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_recycler"
            android:icon="@drawable/ic_style"
            android:title="@string/navigation_recycler" />
        <item
            android:id="@+id/navigation_animation"
            android:icon="@drawable/ic_telescope"
            android:title="@string/navigation_animation" />
        <item
            android:id="@+id/navigation_style"
            android:icon="@drawable/ic_hamburger_menu_bottom_bar"
            android:title="@string/navigation_choose_style" />
        <item
            android:id="@+id/navigation_coordinator"
            android:icon="@drawable/ic_load_error_vector"
            android:title="@string/navigation_coordinator" />
        <item
            android:id="@+id/navigation_api"
            android:icon="@drawable/ic_archive"
            android:title="@string/api_fragment" />
        <item
            android:id="@+id/navigation_api_bottom"
            android:icon="@drawable/ic_send"
            android:title="@string/api_bottom_fragment" />
    </group>
</menu>
