<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_orange"
                style="@style/myMaterialButtonStyleOrange"
                android:text="@string/styles_tab_item_orange" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_blue_gray"
                style="@style/myMaterialButtonStyleBlueGray"
                android:text="@string/styles_tab_item_blue_gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_indigo"
                style="@style/myMaterialButtonStyleIndigo"
                android:text="@string/styles_tab_item_indigo" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/themeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <RadioButton
                android:id="@+id/themeDark"
                style="@style/SecondaryText"
                android:text="@string/rb_light_theme" />

            <RadioButton
                android:id="@+id/themeLight"
                style="@style/SecondaryText"
                android:text="@string/rb_dark_theme" />

            <RadioButton
                android:id="@+id/themeSystem"
                style="@style/SecondaryText"
                android:text="@string/rb_system_theme" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>
