<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layoutDescription="@xml/motion_scene_short">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="@+id/chips_Group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText"
                    style="@style/MyTextAppearanceHeadline1"
                    android:inputType="textAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/MyTextAppearanceHeadline1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips_Group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipYesterday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_yesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_today" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDayBeforeYesterday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_day_before_yesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipEarthToday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_earth_today" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMarsToday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_mars_today" />

            </com.google.android.material.chip.ChipGroup>


        <com.chester095.nasa.utils.EquilateralImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/photo_of_the_day_stub"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chips_Group"
            app:srcCompat="@drawable/ic_no_photo_vector" />
        </androidx.constraintlayout.motion.widget.MotionLayout>

    <TextView
        android:id="@+id/videoOfTheDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textStyle="bold" />


    <include
        android:id="@+id/included"
        layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_plus_fab"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
